[tool.poetry]
name = "mishka_services"
version = "0.1.21"
description = ""
authors = ["Ivan Rychkov <rychkov.ivan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydash = "^5.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
